tests/fail/ownershipTest2.rs


let s : String = "hello";
let x : String = s; 
let y : String = s;
// should fail since s is moved